# CAST

./: .gitmodules  LICENSE  README.md  pyproject.toml
cast/: __init__.py
cast/atomic_model/: train_atomic.py
cast/atomic_model/configs/: data_config.yaml
cast/atomic_model/data/: data_split.py  dataset.py  split_atomic_dataset.sh
cast/atomic_model/model/: atomic_model.py  vision_encoder.py
cast/atomic_model/train/training/: train_eval_loop.py  train_utils.py
cast/atomic_model/train/visualizing/: action_utils.py  lang_utils.py
cast/atomic_model/utils/: data_utils.py
cast/data/: build_atomic_dataset.py  generate_cast_dataset.py  single_gemini_call.py
cast/data/conversion/cast_counterfactual/: cast_counterfactual_dataset_builder.py
cast/data/conversion/cast_filtered/: cast_filtered_dataset_builder.py
cast/data/prompts/: cf_step_prompt.txt  filter_step_prompt.txt  hindsight_describe_prompt.txt  hindsight_summarize_prompt.txt
cast/data/schemas/: cf_step_schema.json  filter_step_schema.json  hindsight_describe_schema.json  hindsight_summarize_schema.json
cast/data/utils/: action_generation.py  atomic_decomposition.py  common.py  counterfactual.py  filtering.py  hindsight_labeling.py  trajectory_viz.py
cast/data/visualization/: demo_inference.ipynb
configs/: atomic_model.yaml  data_gen.yaml
