[project]
name = "cast"
version = "0.1.0"
description = "CAST data generation + tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"big-vision",
	"PyYAML>=6.0",
	"tqdm>=4.66.0",
	"Pillow>=10.0.0",
	"lmdb>=2.1.1",
	"diffusers>=0.37.1",
	"warmup-scheduler>=0.3",
	"diffusion-policy",
	"apache-beam>=2.72.0",
	"mlcroissant>=1.0.22",
	"tensorflow-hub>=0.16.1",
	"importlib-resources>=6.5.2",
]

[tool.uv]
find-links = ["https://storage.googleapis.com/jax-releases/libtpu_releases.html"]
prerelease = "allow"
conflicts = [
	[
		{ extra = "tpu" },
		{ extra = "gpu" },
	],
]

[tool.uv.sources]
big-vision = { path = "cast-vla", editable = true }
dlimp = { git = "https://github.com/catglossop/dlimp.git" }
octo = { path = "cast-vla/octo", editable = true }
diffusion-policy = { path = "cast/diffusion_policy", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
	"ipywidgets>=8.1.5",
	"isort>=6.0.0b2",
	"ruff>=0.8.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["cast"]

